# bendobundles

./: .gitignore  Cargo.toml  DESIGN.md  PRODUCT.md  README.md  infracost.yml
.github/workflows/: ci.yml
.impeccable/: .gitignore  design.json
.superpowers/sdd/: review-round1-fixes.md  task-6-report.md
crates/admin-api/: Cargo.toml
crates/admin-api/src/: lib.rs  main.rs
crates/admin-api/tests/: api_test.rs
crates/domain/: Cargo.toml
crates/domain/src/: lib.rs
crates/dynamo/: Cargo.toml
crates/dynamo/src/: lib.rs  schema.rs
crates/dynamo/tests/: store_test.rs
crates/fulfillment/: Cargo.toml
crates/fulfillment/src/: lib.rs  main.rs
crates/fulfillment/tests/: handler_test.rs
crates/humble-client/: Cargo.toml
crates/humble-client/src/: lib.rs  model.rs
crates/humble-client/tests/: client_test.rs
crates/humble-client/tests/fixtures/: membership_may_2021.html  order_detail.json  user_order.json
crates/public-api/: Cargo.toml
crates/public-api/src/: lib.rs  main.rs
crates/public-api/tests/: api_test.rs
crates/steam-client/: Cargo.toml
crates/steam-client/src/: lib.rs
crates/steam-client/tests/: client_test.rs
crates/steam-client/tests/fixtures/: appdetails-413150-trimmed.json  appreviews-overall-413150.json
docs/design-explorations/: README.md
docs/superpowers/archive/: README.md
docs/superpowers/archive/plans/: 2026-07-02-plan1-backend-core.md  2026-07-02-plan2-lambdas.md  2026-07-03-plan3-frontend.md  2026-07-03-plan4-terraform.md
docs/superpowers/plans/: 2026-07-06-game-detail-modal.md  2026-07-06-self-claim.md  2026-07-06-steam-integration.md  2026-07-07-genre-category-allowlist.md  2026-07-07-genres-in-link-list.md  2026-07-08-media-carousel.md  2026-07-10-catalog-toolkit.md  2026-07-14-steam-tags-descriptors.md  2026-07-17-steamapp-conditional-put.md
docs/superpowers/specs/: 2026-07-02-bendobundles-design.md  2026-07-05-humble-choice-design.md  2026-07-06-game-detail-modal-design.md  2026-07-06-self-claim-design.md  2026-07-06-steam-integration-design.md  2026-07-07-genre-category-allowlist-design.md  2026-07-08-media-carousel-design.md  2026-07-10-catalog-toolkit-design.md  2026-07-14-steam-tags-descriptors-design.md  2026-07-15-thank-you-notes-design.md  2026-07-17-steamapp-conditional-put-design.md
docs/superpowers/specs/captures/2026-07-06-steam/: appdetails-413150-trimmed.json  appreviewhistogram-413150.json  humble-order-tpk-sample-scrubbed.json
terraform/: README.md  aws-apigateway.tf  aws-cloudfront.tf  aws-dynamodb.tf  aws-eventbridge.tf  aws-lambda.tf  aws-ssm.tf  backend.hcl.example  build.sh  deploy-web.sh  infracost-usage.yml  main.tf  tf-backend.tf  tf-outputs.tf  tf-provider.tf  tf-variables.tf  tf-versions.tf
terraform-iam/: .terraform.lock.hcl  README.md  backend.hcl.example  iam-boundary.tf  iam-debug-role.tf  iam-deploy-role.tf  iam-maintenance-role.tf  iam-manager.tf  main.tf  tf-backend.tf  tf-outputs.tf  tf-provider.tf  tf-variables.tf
web/: eslint.config.js  index.html  package-lock.json  package.json  tsconfig.app.json  vite.config.ts
web/public/: site.webmanifest
web/src/: App.test.tsx  App.tsx  ClaimChest.tsx  GameDetailModal.test.tsx  GameDetailModal.tsx  MediaHeader.tsx  api.test.ts  api.ts  gameDetailCache.ts  index.css  inviteUrl.ts  main.tsx  motion.ts  steamIdentity.test.ts  steamIdentity.ts  tags.test.ts  tags.ts  test-setup.ts  text.test.ts  text.ts  titleColor.ts
web/src/admin/: AdminApp.test.tsx  AdminApp.tsx  Catalog.test.tsx  Catalog.tsx  Links.test.tsx  Links.tsx  Login.test.tsx  Login.tsx  Ops.test.tsx  Ops.tsx  ToolkitBar.test.tsx  ToolkitBar.tsx  catalogToolkit.test.ts  catalogToolkit.ts  withAuth.ts
web/src/friend/: BootScreen.tsx  ClaimDialog.test.tsx  ClaimDialog.tsx  ClaimsHistory.tsx  CursorCompanion.tsx  GameGrid.test.tsx  GameGrid.tsx  Landing.tsx  LinkPage.test.tsx  LinkPage.tsx  ThanksCard.tsx
