[workspace]
resolver = "3"
members = ["crates/domain", "crates/humble-client", "crates/dynamo", "crates/fulfillment"]

[workspace.package]
edition = "2024"
license = "MIT"
publish = false

[workspace.dependencies]
serde = { version = "1", features = ["derive"] }
serde_json = "1"
thiserror = "2"
time = { version = "0.3", features = ["serde", "formatting", "parsing", "macros"] }
tokio = { version = "1", features = ["macros", "rt-multi-thread"] }
uuid = { version = "1", features = ["v4"] }
