[package]
name = "fulfillment"
version = "0.1.0"
edition.workspace = true
publish.workspace = true

[dependencies]
domain = { path = "../domain" }
humble-client = { path = "../humble-client" }
dynamo = { path = "../dynamo" }
reqwest = { version = "0.12", default-features = false, features = ["json", "rustls-tls"] }
serde.workspace = true
serde_json.workspace = true
time.workspace = true
tokio = { workspace = true, features = ["time"] }

[dev-dependencies]
aws-config = { version = "1", features = ["behavior-version-latest", "test-util"] }
aws-sdk-dynamodb = "1"
tokio.workspace = true
wiremock = "0.6"
