[package]
name = "fulfillment"
version = "0.1.0"
edition.workspace = true
publish.workspace = true

[dependencies]
domain = { path = "../domain" }
humble-client = { path = "../humble-client" }
dynamo = { path = "../dynamo" }
steam-client = { path = "../steam-client" }
reqwest = { version = "0.12", default-features = false, features = ["json", "rustls-tls"] }
serde.workspace = true
serde_json.workspace = true
time.workspace = true
tokio = { workspace = true, features = ["time"] }
# bin-only deps (lambda_runtime dispatch, SSM config, observability)
lambda_runtime = "0.14"
aws-sdk-ssm = "1"
aws-sdk-dynamodb = "1"
aws-config = { version = "1", features = ["behavior-version-latest"] }
tracing = "0.1"
tracing-subscriber = "0.3"

[dev-dependencies]
aws-config = { version = "1", features = ["behavior-version-latest", "test-util"] }
aws-sdk-dynamodb = "1"
tokio.workspace = true
wiremock = "0.6"

[features]
# Build-gate for the run-once backfill bin (see src/bin/backfill_details.rs). Empty on
# purpose: the bin's deps are all normal deps; the gate just keeps it out of default builds.
backfill = []

[[bin]]
name = "backfill_details"
required-features = ["backfill"]
