[package]
name = "humble-client"
version = "0.1.0"
edition.workspace = true
publish.workspace = true

[dependencies]
reqwest = { version = "0.12", default-features = false, features = ["json", "rustls-tls"] }
serde.workspace = true
serde_json.workspace = true
thiserror.workspace = true
tokio.workspace = true

[dev-dependencies]
wiremock = "0.6"
