[package]
name = "steam-client"
version = "0.1.0"
edition.workspace = true
publish.workspace = true

[dependencies]
reqwest = { version = "0.12", default-features = false, features = ["rustls-tls", "json"] }
serde.workspace = true
serde_json.workspace = true
thiserror.workspace = true
tracing = "0.1"
tokio.workspace = true

[dev-dependencies]
tokio.workspace = true
wiremock = "0.6"
